src/main/metadata/objects/Campaign_history_log__c.object
<CustomObject>
    <description>daily basis log if any changes happen to an ongoing campaign from the Central Marketing team, including campaign offering changes, campaign package changes and participating dealer changes .</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Detail operation</description>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign History Log</relationshipLabel>
        <relationshipName>Campaign_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Campaign
Campaign Offering
Campaign Package
Participating Dealer</description>
        <label>Object Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign History Log</label>
    <nameField>
        <label>Log  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign History Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>